--- a/source/RewardsUI/rewards/index.html
+++ b/source/RewardsUI/rewards/index.html
@@ -13,7 +13,7 @@
             </tr>
             {% for reward in rewards_data %}
                 <tr>
-                    <td>{{ reward.tier }}<td>
+                    <td>{{ reward.tier }}</td>
                     <td>{{ reward.points }}</td>
                     <td>{{ reward.rewardName }}</td>
                 </tr>
@@ -47,15 +47,17 @@
             </tr>
             </thead>
             <tbody>
+            {% for customer in clientele_data %}
                 <tr>
-                    <td>customer01@gmail.com</td>
-                    <td>100</td>
-                    <td>A</td>
-                    <td>5% off purchase</td>
-                    <td>B</td>
-                    <td>10% off purchase</td>
-                    <td>50%</td>
+                    <td>{{ customer.email }}</td>
+                    <td>{{ customer.points }}</td>
+                    <td>{{ customer.tier }}</td>
+                    <td>{{ customer.rewardName }}</td>
+                    <td>{{ customer.nextTier }}</td>
+                    <td>{{ customer.nextTierName }}</td>
+                    <td>{{ customer.nextTierProgress }}</td>
                 </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
