--- a/source/RewardsUI/rewards/index.html
+++ b/source/RewardsUI/rewards/index.html
@@ -23,9 +23,10 @@
     </div>
     <div>
         <h2>Add orders</h2>
-        <form>
-            <label>Enter email address: </label><input type="text"/><br>
-            <label>Enter order total: </label><input type="text"/><input type="button" value="Submit Order"/>
+        <form action="/rewards/" method="post">
+            {% csrf_token %}
+            {{ purchase_form }}
+            <input type="submit" value="Submit Order"/>
         </form>
         <hr>
     </div>
