--- a/source/RewardsUI/rewards/index.html
+++ b/source/RewardsUI/rewards/index.html
@@ -33,7 +33,9 @@
     <div>
         <h2>User Rewards</h2>
         <form>
-            <label>Email address: </label><input type="text"/><input type="button" value="Search"/>
+            {% csrf_token %}
+            {{ user_filter }}
+            <input type="submit" value="Search"/>
         </form>
         <table border="1">
             <thead>
